<resources>
    <string name="app_name">PAINFREE</string>
    <string name="patient_new">New</string>
    <string name="patient_list">Select patient</string>
    <string name="action_update_patient">Edit current patient</string>
    <string name="action_export_csv">Export to spreadsheet</string>
    <string name="clear">Delete patient record</string>
    <string name="clear_all">Delete all records</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_sectionA">Site</string>
    <string name="title_sectionB">Demographic</string>
    <string name="title_sectionC">Injury</string>
    <string name="title_sectionD">Triage</string>
    <string name="title_sectionE">ED Stay</string>
    <string name="title_sectionF">Cognition</string>
    <string name="title_sectionG">Discharge</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="error_id">Please enter a unique subject ID</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_patient_list">Select a subject</string>
    <string name="site">Site:</string>
    <string name="completed_by">Completed by:</string>
    <string name="date">Date:</string>
    <string name="select_date">Select date</string>
    <string name="subject_id">Subject ID:</string>
    <string name="date_of_arrival">Date of arrival to ED:</string>
    <string name="select_time">Select time</string>
    <string name="time_of_arrival">Time of arrival to ED:</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="fracture_title">Anatomical site of fractures (please select all that apply):</string>
    <string name="foot">Foot</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="ankle">Ankle</string>
    <string name="tibia_fibula">Tibia/Fibula</string>
    <string name="femur">Femur</string>
    <string name="hip">Hip</string>
    <string name="pelvis">Pelvis</string>
    <string name="vertebra">Vertebra(e)</string>
    <string name="ribs">Rib(s)</string>
    <string name="humerus">Humerus</string>
    <string name="wrist">Wrist</string>
    <string name="forearm">Forearm</string>
    <string name="other">Other</string>
    <string name="unspecified">Unspecified</string>
    <string name="yes">Yes</string>
    <string name="device_id_message">Please enter a unique device ID</string>
    <string name="period_of_extraction">Period of extraction:</string>
    <string name="pre1">Pre 1</string>
    <string name="pre2">Pre 2</string>
    <string name="post1">Post 1</string>
    <string name="post2">Post 2</string>
    <string name="jgh">JGH</string>
    <string name="mgh">MGH</string>
    <string name="lgh">LGH</string>
    <string name="rvh">RVH</string>
    <string name="hsc">HSC</string>
    <string name="smh">SMH</string>
    <string name="hdv">HDV</string>
    <string name="mechanism_of_injury">Mechanism of Injury:</string>
    <string name="none">None</string>
    <string name="mechanism1">Fall on same level due to ice and snow</string>
    <string name="mechanism2">Fall on same level from slipping, tripping and stumbling without subsequent striking against object</string>
    <string name="mechanism3">Fall involving ice-skates, skis, roller-skates or skateboards</string>
    <string name="mechanism4">Other fall on same level due to collision with, or pushing by, another person</string>
    <string name="mechanism5">Fall while being carried or supported by other persons</string>
    <string name="mechanism6">Fall from non-moving wheelchair, non-motorized and motorized mobility scooter</string>
    <string name="mechanism7">Fall involving bed</string>
    <string name="mechanism8">Fall from chair</string>
    <string name="mechanism9">Fall from other furniture</string>
    <string name="mechanism10">Fall involving playground equipment</string>
    <string name="mechanism11">Fall on and from stairs and steps</string>
    <string name="mechanism12">Fall on and from ladder</string>
    <string name="mechanism13">Fall on and from scaffolding</string>
    <string name="mechanism14">Fall from, out of, or through building or structure</string>
    <string name="mechanism15">Fall from tree</string>
    <string name="mechanism16">Fall from cliff</string>
    <string name="mechanism17">Fall, dive, or jump into water causing injury other than drowning or submersion</string>
    <string name="mechanism18">Other fall from one level to another</string>
    <string name="mechanism19">Other slipping, tripping and stumbling and falls</string>
    <string name="mechanism20">Unspecified fall</string>
    <string name="mechanismCode1">W00</string>
    <string name="mechanismCode2">W01</string>
    <string name="mechanismCode3">W02</string>
    <string name="mechanismCode4">W03</string>
    <string name="mechanismCode5">W04</string>
    <string name="mechanismCode6">W05</string>
    <string name="mechanismCode7">W06</string>
    <string name="mechanismCode8">W07</string>
    <string name="mechanismCode9">W08</string>
    <string name="mechanismCode10">W09</string>
    <string name="mechanismCode11">W10</string>
    <string name="mechanismCode12">W11</string>
    <string name="mechanismCode13">W12</string>
    <string name="mechanismCode14">W13</string>
    <string name="mechanismCode15">W14</string>
    <string name="mechanismCode16">W15</string>
    <string name="mechanismCode17">W16</string>
    <string name="mechanismCode18">W17</string>
    <string name="mechanismCode19">W18</string>
    <string name="mechanismCode20">W19</string>
    <string name="physician_examination_date">Physician examination date:</string>
    <string name="physician_examination_time">Physician examination time:</string>
    <string name="triage_date">Date of triage:</string>
    <string name="triage_time">Time of triage:</string>
    <string name="button_clear">Clear</string>
    <string name="ctas_priority">CTAS Priority:</string>
    <string name="ctas_1">I</string>
    <string name="ctas_2">II</string>
    <string name="ctas_3">III</string>
    <string name="ctas_4">IV</string>
    <string name="ctas_5">V</string>
    <string name="glasgow">Glasgow scale score:</string>
    <string name="pain_scale_score">Pain scale score:</string>
    <string name="collective_order">Collective order:</string>
    <string name="collective_order_body">Collective order</string>
    <string name="history_of_dementia">History of dementia:</string>
    <string name="acetaminophen">Acetaminophen</string>
    <string name="nsaids">NSAIDs</string>
    <string name="opioid">Opioid</string>
    <string name="no">No</string>
    <string name="altered_cognition">Evidence of altered cognition:</string>
    <string name="confusion">Confusion</string>
    <string name="agitation">Agitation</string>
    <string name="disorientation">Disorientation</string>
    <string name="assessment1">Assessment 1</string>
    <string name="pain_assessments">Pain assessments</string>
    <string name="analgesic_prescriptions">Analgesic prescriptions</string>
    <string name="mode_of_prescription">Mode of prescription:</string>
    <string name="type_of_analgesic_prescribed">Type of analgesic prescribed:</string>
    <string name="standard_order">Standard order</string>
    <string name="pharmaceutical_algorithm">Pharmaceutical algorithm</string>
    <string name="evidence_altered_cognition">New evidence of altered cognition within 24 hours:</string>
    <string name="not_specified">Not specified</string>
    <string name="short_cam_score">CAM score:</string>
    <string name="not_applicable">Not applicable</string>
    <string name="discharge_date">Discharge date:</string>
    <string name="discharge_time">Discharge time:</string>
    <string name="discharge_destination">Discharge destination:</string>
    <string name="return_home">Return home/residence</string>
    <string name="admitting">Admitting</string>
    <string name="transfer">Transfer to another hospital</string>
    <string name="lwbs">LWBS</string>
    <string name="death">Death</string>
    <string name="not_available">Not available</string>
    <string name="discharge_tool_given">Discharge tool given:</string>
    <string name="return_to_ed">Return to ED within 7 days:</string>
    <string name="if_yes_why">If yes, why?</string>
    <string name="description">Description</string>
    <string name="uncontrolled_pain">Uncontrolled pain</string>
    <string name="scheduled_cast_check">Scheduled cast check</string>
    <string name="issues_with_cast">Issues with cast</string>
    <string name="swelling">Swelling; Compartment Syndrome</string>
    <string name="worsening_of_health_status">Worsening of health status</string>
    <string name="new_fracture">New fracture</string>
    <string name="type_of_analgesic_administered">Type of analgesic administered:</string>
    <string name="type_of_order">Type of order:</string>
    <string name="route">Route:</string>
    <string name="frequency">Frequency:</string>
    <string name="nerve_block">Nerve block</string>
    <string name="type_of_nerve_block">Type of nerve block:</string>
    <string name="alternative_pain_relief">Alternative pain relief</string>
    <string name="refusal_of_analgesia">Analgesia refused</string>
    <string name="analgesic_administrations">Analgesic administrations</string>
    <string name="written">Written</string>
    <string name="verbal">Verbal</string>
    <string name="enter_dose">Enter dose</string>
    <string name="im">IM</string>
    <string name="iv">IV</string>
    <string name="po">PO</string>
    <string name="sc">SC</string>
    <string name="pr">PR</string>
    <string name="ice">Ice</string>
    <string name="cool_cloths">Cool cloths</string>
    <string name="soft_cushions">Soft cushions</string>
    <string name="other_pain_relief">Other pain relief</string>
    <string name="worsening_of_mental_status">Worsening of mental status while in ED:</string>
    <string name="mandatory_fields_title">The following mandatory fields must be filled</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="start">Start</string>
    <string name="medical_record_number">Medical record number:</string>
    <string name="specify">Please specify</string>
    <string name="past_diagnosis_of_altered_cognition">Past diagnosis of altered cognition:</string>
    <string name="no_information">No information</string>
    <string name="administration">Administration</string>
    <string name="prescription">Prescription</string>
    <string name="dose">Dose:</string>
    <string name="enter_frequency">Enter frequency</string>
    <string name="events">Events</string>
    <string name="select_type_of_event">Select type of event</string>
    <string name="pain_assessment">Pain assessment</string>
    <string name="analgesic_prescription">Analgesic prescription</string>
    <string name="analgesic_administration">Analgesic administration</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="head">Skull</string>
    <string name="toes">Toe</string>
    <string name="fingers">Finger</string>
    <string name="notice">Notice</string>
    <string name="not_used">Not used</string>
    <string name="discharge_prescription_given">Discharge prescription given to patient:</string>
    <string name="user_maj">MAJ</string>
    <string name="user_vbc">VBC</string>
    <string name="user_mw">MW</string>
    <string name="linked_analgesic_prescription">Linked analgesic prescription:</string>
    <string name="refusal">Refusal:</string>
</resources>