<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/card_border"
    android:clipToPadding="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/site"
            style="@style/textFormStyle"/>

        <EditText
            android:id="@+id/edit_site"
            style="@style/editTextFormStyle"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/completed_by"
            style="@style/textFormStyle"/>

        <EditText
            android:id="@+id/edit_completed_by"
            style="@style/editTextFormStyle"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/date"
            style="@style/textFormStyle"/>

        <Button
            android:id="@+id/select_date"
            style="@style/buttonCard"
            android:text="@string/select_date"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/subject_id"
            style="@style/textFormStyle"/>

        <EditText
            android:id="@+id/edit_subject_id"
            style="@style/editTextFormStyle"
            android:inputType="number"/>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/date_of_arrival"
            style="@style/textFormStyle"/>

        <Button
            android:id="@+id/select_arrival_date"
            style="@style/buttonCard"
            android:text="@string/select_date"/>


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <TextView
            android:text="@string/time_of_arrival"
            style="@style/textFormStyle"/>

        <Button
            android:id="@+id/select_arrival_time"
            style="@style/buttonCard"
            android:text="@string/select_time"/>


    </LinearLayout>

</LinearLayout>



