<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/card_border"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/textFormStyle"/>

            <CheckBox
                android:id="@+id/noneCheckbox"
                android:layout_marginEnd="@dimen/button_layout_margin"
                android:text="@string/none"
                android:layout_width="wrap_content"
                style="@style/checkboxStyle"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_weight="4"
                style="@style/buttonCard"
                android:text="@string/select_date"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/buttonCardSecondary"
                android:text="@string/button_clear"
                android:visibility="gone"/>

        </LinearLayout>




    </LinearLayout>

</FrameLayout>
